<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.justplanit.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_progress"
        android:name="com.example.justplanit.ui.progress.ProgressFragment"
        android:label="@string/title_progress"
        tools:layout="@layout/fragment_progress" />

    <fragment
        android:id="@+id/navigation_achievements"
        android:name="com.example.justplanit.ui.achievements.AchievementsFragment"
        android:label="@string/title_achievements"
        tools:layout="@layout/fragment_achievements" />
</navigation>