<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewResolutionActivity">

    <TextView
        android:id="@+id/respro_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="resolution name"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/respro_date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:text="@string/active_since"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/respro_header" />

    <TextView
        android:id="@+id/respro_goal_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/goal"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/respro_date_text" />

    <TextView
        android:id="@+id/respro_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="starting date"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/respro_date_text"
        app:layout_constraintStart_toEndOf="@+id/respro_date_text"
        app:layout_constraintTop_toTopOf="@+id/respro_date_text" />

    <TextView
        android:id="@+id/respro_goal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="activity, unit/ frequency"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/respro_goal_text"
        app:layout_constraintEnd_toEndOf="@+id/respro_date"
        app:layout_constraintStart_toStartOf="@+id/respro_date"
        app:layout_constraintTop_toTopOf="@+id/respro_goal_text"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/respro_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:text="@string/progress_add"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/respro_goal_text"
        tools:visibility="invisible" />

    <Button
        android:id="@+id/respro_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/resolution_end"
        app:layout_constraintBottom_toBottomOf="@+id/respro_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/respro_add" />

    <TextView
        android:id="@+id/respro_note_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/note"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/respro_note"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/respro_note"
        android:layout_width="0dp"
        android:layout_height="128dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="space for comment"
        app:layout_constraintBottom_toTopOf="@+id/respro_note_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/respro_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/respro_note_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/respro_add" />

    <Button
        android:id="@+id/respro_note_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/save_note"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>